added the heading and styled

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <div class="container">
+
+        <h2>Welcome To My Calculator!</h2>
         <div class="calculator">
             <form>
                 <div class="display">
